# far2l-adb

./: .gitignore  Brewfile  CMakeLists.txt  build.sh  release.sh
NetRocks/src/UI/: DialogUtils.cpp
WinPort/src/Backend/: WinPortMain.cpp
WinPort/src/Backend/WX/: wxWinTranslations.cpp
_release/: .ninja_deps  .ninja_log  build.ninja
_release/Colorer-library/src/colorer/common/: Features.h
_release/far2l/bootstrap/: FarBel.lng  FarCze.lng  FarEng.hlf  FarEng.lng  FarGer.lng  FarHun.hlf  FarHun.lng  FarPol.lng  FarRus.hlf  FarRus.lng  FarSpa.lng  FarUkr.hlf  FarUkr.lng  farlang.templ  farversion.inc  lang.inc
_release/packaging/osx/: FixupBundle.cmake  Setup.scpt
adb/: CMakeLists.txt  adb.far-plug-wide
adb/src/: ADBDevice.cpp  ADBDevice.h  ADBDialogs.cpp  ADBDialogs.h  ADBLog.cpp  ADBLog.h  ADBPlugin.cpp  ADBPlugin.h  ADBShell.cpp  ADBShell.h  FARPlugin.cpp
arclite/configs/plug/: arclite_bel.lng  arclite_eng.lng  arclite_ita.lng  arclite_pol.lng  arclite_rus.lng  arclite_spa.lng
arclite/src/: archive.cpp  msg.hpp  plugin.cpp  sysutils.cpp  sysutils.hpp  update.cpp
colorer/src/pcolorer2/: FarEditorSet.cpp
far2l/: far2ledit
far2l/bootstrap/scripts/: farlang.templ.m4
far2l/src/plug/: plugapi.cpp
far2l/src/vt/: vtlog.cpp
img/: .gitignore  CMakeLists.txt
img/configs/: config.ini
img/configs/plug/: img_en.hlf
img/src/: Common.h  Image.cpp  Image.h  ImageAtFull.cpp  ImageAtQV.cpp  ImageView.cpp  ImgLog.cpp  ImgLog.h  Plugin.cpp  Settings.cpp  Settings.h  lng.h
img/src/decoder/: ImageDecoder.cpp  ImageDecoder_heif.cpp  ImageDecoder_linux.cpp  ImageDecoder_mac.cpp  ImageDecoder_stb.cpp  ImageDecoder_tiff.cpp  ImageDecoder_tiff.h  ImageDecoder_webp.cpp
memo/src/: memo.cpp
mtp/: CMakeLists.txt  README.md
mtp/docs/: VALIDATION.md
mtp/src/: FARPlugin.cpp  FARPlugin.h  LibMtpBackend.cpp  LibMtpBackend.h  MTPDevice.cpp  MTPDevice.h  MTPDialogs.cpp  MTPDialogs.h  MTPFileSystem.cpp  MTPFileSystem.h  MTPLog.cpp  MTPLog.h  MTPPlugin.cpp  MTPPlugin.h
mtp/src/backend/: BackendRouter.cpp  BackendRouter.h  IProtocolSession.h  MtpBackend.cpp  MtpBackend.h  PtpBackend.cpp  PtpBackend.h
mtp/src/core/: Cancellation.h  OpQueue.h  Types.h
mtp/src/mtp/: DirectoryCache.cpp  DirectoryCache.h  MtpDeviceModel.cpp  MtpDeviceModel.h  MtpSession.cpp  MtpSession.h  QuirkRegistry.cpp  QuirkRegistry.h  TransferManager.cpp  TransferManager.h
mtp/src/ptp/: PtpContainers.h  PtpSession.cpp  PtpSession.h
mtp/src/usb/: UsbEnumerator.h  UsbEnumerator_linux.cpp  UsbEnumerator_mac.cpp  UsbTransport.cpp  UsbTransport.h
packaging/osx/: FixupBundle.cmake.in
preview/: CMakeLists.txt
preview/configs/plug/: preview_en.hlf
preview/src/: Image.cpp  ImageAtFull.cpp  ImageAtQV.cpp  ImageView.cpp  ImageView.h  Plugin.cpp  PreviewLog.cpp  PreviewLog.h  Settings.cpp  lng.h
preview/src/decoder/: ImageDecoder.cpp  ImageDecoder.h  ImageDecoder_common.cpp  ImageDecoder_heif.cpp  ImageDecoder_linux.cpp  ImageDecoder_mac.cpp  ImageDecoder_stb.cpp  ImageDecoder_tiff.cpp  ImageDecoder_webp.cpp
scratchpad/: CMakeLists.txt
scratchpad/src/: scratchpad.cpp
utils/src/: POpen.cpp  TestPath_test.cpp
